--- a/index.html
+++ b/index.html
@@ -30,14 +30,6 @@
         @keyframes dataUpdate {
             0% { transform: scale(1); } 50% { transform: scale(1.05); } 100% { transform: scale(1); }
         }
-        /* Chart.js Tooltip样式 */
-        。chartjs-tooltip {
-            background: rgba(255, 255, 255, 0.9) !important;
-            border-radius: 6px !important;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1) !important;
-            border: 1px solid #e2e8f0 !important;
-            padding: 8px !important;
-        }
     </style>
 </head>
 <body class="font-inter bg-light text-dark min-h-screen">
@@ -118,6 +110,6 @@
         </div>
     </main>
     
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
